Added a directory Clean Data with all the wether data and the code that cleans the wether data and a directory with the outcome of the cleaning code. The code has issue with its output, will look into it tomorrow
fixed the cleaning code a bit, still not done
Date_data not creating for Lulea, dont know why
Problem fixed by adding -e flag to make escape char works


Added a C++ script (annualtemp.cpp) to output the year since 1722-2013 and the yearly average temperature. This is mostly intended to work on the Uppsala dataset but can probably be modified to include other sets.
The results from annualtemp.cpp are placed in a folder named UppsalaData and the output is called annualtemp.txt.


-Changed a bug in annualtemp.cpp (from 2003 to 2013).
-Added a C++ script (movingmean.cpp) that can compute moving means in user-input box-intervals. Can output a file with the mean over the full interval or a .txt file with moving means.

Finished the code for now, added the date to data_date and temperature to to data_temp



Added a class dealing with date format string

Added a C++ script (dateOfPeakTemp.cpp) to output the hottest and coldest date in each year at specific location. Now only design for input format other than Uppsala.

Added day_of_year function to class Date

Starting to fix the code that calculated the average temp per day

11/10-2019
Modified some scripts, created another version of movingmeanflexible and did a plotting and predicting root script TempYearPlotandPred.C that can predict temperature in Uppsala for a user input year. And does some nice plotting."
Done with temp per day, took way to long but works fine now
All day_temp_data for all locations


Added a C++ script (dateOfPeakTemp_Upp.cpp) to output the hottest and coldest date in each year for Uppsala.

Added temparature member to class Date

Calculated the average temp each day
