@@ -35,3 +35,4 @@ Added temparature member to class Date
 
 Calculated the average temp each day
 
+Draw 3 different hist with different range for Gaussian fit
